src/test/deca/context/valid/created/method-call.deca
class A{
	
	
}
class B{
	
	void fonction(A a, int b){
	}
	
}
{
	B b = new B();
	A c = new A();
	b.fonction(c, 3);
}