src/test/deca/context/invalid/created/wrong-object-declaration.deca
class A{
	void x(){}
}
{
	A a = A();
}